-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.6.1
-
None
-
Windows 7 64 bit
MSVC2013
cdb 6.12
Creator built on Qt 5.5.1, Creator built on Qt 5.6.0
-
a28f73971a0497504d5aee01f791871a404bb381
- Open the Samegame demo from qtdeclarative\examples\quick\demos\samegame.
It doesn't matter whether you use the .pro or the .qmlproject file. - Set a breakpoint in the first line of the function startNewGame(...).
- Run the demo on Qt 5.6.
- In the demo, click "1 Player".
The breakpoint will be hit. - In "Locals and Expression", expand the "this" pointer.
You can see all the members now. - Step forward.
The members of "this" are gone and you can't expand the "this" pointer anymore.
It should always be possible to expand and collapse the "this" pointer. When the app is running on Qt 5.5.1, this works correctly.
If this is a bug in Qt, please forward it accordingly.
- relates to
-
QTCREATORBUG-15798 [properties] cannot be expanded while debugging.
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-15747 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
155809,2 | Debugger: Keep 'this' expanded while stepping | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |