Debugger: Keep 'this' expanded while stepping

Change-Id: Ib72a10e5dbf54c7586254ed513718631e5289b37
Task-number: QTCREATORBUG-15747
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>